--- a/pages/cover/cover.wxml
+++ b/pages/cover/cover.wxml
@@ -1,3 +1,6 @@
-<view class="cover-container">
-  fdsaf 
+<!--pages/cover/cover.wxml-->
+<view class="container cover">
+  <view class="userinfo">
+    sfs
+  </view>
 </view>
